force-app/main/default/objects/Broker_Listing__c/Broker_Listing__c.object-meta.xml
<CustomObject>
    <label>Broker Listing</label>
    <nameField>
        <displayFormat>BL-{0000}</displayFormat>
        <label>Listing Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Broker Listings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>