force-app/main/default/objects/Broker_Listing__c/fields/Broker_Firm__c.field-meta.xml
<CustomField>
    <fullName>Broker_Firm__c</fullName>
    <label>Broker Firm</label>
    <length>255</length>
    <type>Text</type>
</CustomField>