force-app/main/default/objects/Broker_Listing__c/fields/Call_For_Offers_Date__c.field-meta.xml
<CustomField>
    <fullName>Call_For_Offers_Date__c</fullName>
    <label>Call For Offers Date</label>
    <type>Date</type>
</CustomField>