force-app/main/default/objects/Broker_Listing__c/fields/Commission_Percent__c.field-meta.xml
<CustomField>
    <fullName>Commission_Percent__c</fullName>
    <description>Sell-side commission percentage agreed with the listing broker (typically 1-3% for commercial). Feeds Selling Costs.</description>
    <label>Commission Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>