force-app/main/default/objects/Broker_Listing__c/fields/Days_On_Market__c.field-meta.xml
<CustomField>
    <fullName>Days_On_Market__c</fullName>
    <label>Days On Market</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>