force-app/main/default/objects/Broker_Listing__c/fields/Disposition__c.field-meta.xml
<CustomField>
    <fullName>Disposition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Disposition</label>
    <referenceTo>Disposition__c</referenceTo>
    <relationshipLabel>Broker Listings</relationshipLabel>
    <relationshipName>Broker_Listings</relationshipName>
    <type>Lookup</type>
</CustomField>