force-app/main/default/objects/Broker_Listing__c/fields/List_Date__c.field-meta.xml
<CustomField>
    <fullName>List_Date__c</fullName>
    <label>List Date</label>
    <type>Date</type>
</CustomField>