force-app/main/default/objects/Broker_Listing__c/fields/Listing_Status__c.field-meta.xml
<CustomField>
    <fullName>Listing_Status__c</fullName>
    <label>Listing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On Track</fullName>
                <default>true</default>
                <label>On Track</label>
            </value>
            <value>
                <fullName>At Risk</fullName>
            </value>
            <value>
                <fullName>Hard Stop</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>