force-app/main/default/objects/Broker_Listing__c/fields/Offers_Received__c.field-meta.xml
<CustomField>
    <fullName>Offers_Received__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Offers Received</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>